--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,8 @@ services:
       - jenkins_home:/var/jenkins_home
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false
-      - JENKINS_USER=admin  # Replace with your desired username
-      - JENKINS_PASS=admin123  # Replace with your desired password
     env_file:
-      - jenkins.env
+      - ./jenkins.env
 
 volumes:
   jenkins_home:
